# yangine

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.cpp  vcpkg.json
assets/shaders/: TrianglePixelShader.hlsl
include/: yangine.h
include/engine/: IEngine.h
modules/app/src/: ExceptionFilter.cpp  main.cpp
modules/engine/: CMakeLists.txt  DeviceResources.h  Renderer.cpp  pch.h
modules/engine/assets/shaders/: TrianglePixelShader.hlsl  TriangleVertexShader.hlsl  Triangle_PS.hlsl  Triangle_VS.hlsl  UI_PS.hlsl  UI_VS.hlsl
modules/engine/src/: DeviceResources.cpp  DeviceResources.h  Engine.cpp  Engine.h  IEngine.cpp  Renderer.cpp  Renderer.h  WindowManager.cpp  WindowManager.h  WndProc.h  pch.h
modules/engine/src/canvas/: Camera.cpp  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  DrawItem.h  Models.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  ResourceHolder.cpp  ResourceHolder.h  Scene.cpp  Scene.h  VertexFactory.h
modules/engine/src/common/: AsyncBuf.h  AsyncLogger.h  GameTimer.h  Helpers.h  Logger.h  StepTimer.h  WindowState.h
modules/engine/src/device/: BufferParams.h  CommandList.cpp  CommandList.h  DXGIAdapter.cpp  DXGIAdapter.h  DXGIFactory.cpp  DXGIFactory.h  DeviceResources.cpp  DeviceResources.h  Direct3DQueue.cpp  Direct3DQueue.h  Direct3DQueueProvider.cpp  Direct3DQueueProvider.h  Fence.cpp  Fence.h  Heaps.cpp  Heaps.h  Pipeline.cpp  Pipeline.h  ResourceFactory.cpp  ResourceFactory.h  SwapChain.cpp  SwapChain.h
modules/engine/src/input/: InputController.cpp  InputController.h
modules/engine/src/pipeline/: Factory.cpp  Factory.h  Store.cpp  Store.h
modules/engine/src/window/: WindowState.h  WindowStateReducer.cpp  WindowStateReducer.h
scripts/: build.bat
src/: Application.cpp  Application.h  DeviceResources.cpp  Log.h  Renderer.cpp  StepTimer.h  WindowManager.cpp  WindowManager.h  pch.h  yangine.cpp
src/app/: ExceptionFilter.cpp  main.cpp
src/engine/: Application.cpp  Application.h  CMakeLists.txt  Engine.h  IEngine.cpp  Log.h  Renderer.cpp  WindowManager.cpp  pch.h  yangine.cpp
